@@ -549,6 +549,11 @@ sub _create_log {
         level => defined $level ? $level : 0,
     );
 
+    $self->{log}->_5("\n***\n" .
+                     __PACKAGE__ .
+                     "\n***\n\n"
+    );
+
     $self->{log}->_6("in _create_log()");
 
     if ($self->{log}->level < 6){
